Fix button alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -634,6 +634,11 @@ body .fp-scroller {
   vertical-align: middle;
   width: 0; }
 
+.button > div {
+  display: inline-block;
+  vertical-align: baseline;
+  margin-top: 2px; }
+
 .button.button--mobile-fixed {
   display: none;
   position: fixed;
