--- a/src/sass/layout/_header.sass
+++ b/src/sass/layout/_header.sass
@@ -140,6 +140,11 @@
   vertical-align: middle
   width: 0
 
+.button > div
+  display: inline-block
+  vertical-align: baseline
+  margin-top: 2px
+
 .button.button--mobile-fixed
   display: none
   position: fixed
